--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.8",
     "formik": "^2.2.9",
     "moralis": "^1.3.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-country-region-selector": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.3.2",
@@ -51,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.23"
   }
 }
